--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: fastpages
-description: An easy to use blogging platform with support for Jupyter Notebooks.
+title: Kasun Fernando
+description: My personal website and blog 
 github_username: kasun-fernando
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "personal-webpage"
@@ -37,13 +37,12 @@ url: "https://kasun-fernando.github.io" # the base hostname & protocol for your 
 baseurl: "/personal-webpage" # the subpath of your site, e.g. "/blog".
 
 # Github and twitter are optional:
-minima:
-  social_links:
-    twitter: fastdotai
-    github: fastai
-
+#minima:
+  #social_links:
+    #linkedin:  
+    
 # Set this to true to get LaTeX math equation support
-use_math: 
+use_math: true
 
 # Set this to true to display the summary of your blog post under your title on the Home page.
 show_description: true
@@ -71,10 +70,10 @@ include:
 
 # This specifies what badges are turned on by default for notebook posts.
 default_badges:
-  github: true
-  binder: true
-  colab: true
-  deepnote: true
+  # github: true
+  # binder: true
+  # colab: true
+  # deepnote: true
 
 # Escape HTML in post descriptions
 html_escape:
