--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: Kasun Fernando
-description: My personal website and blog 
+# description: My personal website and blog 
 github_username: kasun-fernando
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "personal-webpage"
