--- a/.github/workflows/check_config.yaml
+++ b/.github/workflows/check_config.yaml
@@ -7,15 +7,14 @@ permissions:
   contents: write
 
 jobs:
-  check-config:
+  check:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@main
-
       - name: Set up Python
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v2
         with:
-          python-version: 3.7
+          python-version: 3.10.16
+          architecture: x64
 
       - name: install dependencies
         run: pip3 install pyyaml
